Домашнее задание 5.